订单档案添加社员标签

--- a/WebContent/crm/searchData_return_order.html
+++ b/WebContent/crm/searchData_return_order.html
@@ -849,9 +849,9 @@ Date.prototype.format=function(fmt) {
 							infoStr= infoStr
 								+"<span style=\"background:url('../data_access/imgmouse_files/20180601180228.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">开卡礼订单</span>";
 						}
-						if(jData[i].order_tag1.indexOf("S") != -1){
+						if(jData[i].order_tag1.indexOf("M") != -1){
 							infoStr= infoStr
-								+"<span style=\"background:url('../data_access/imgmouse_files/20180601180147.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">试用礼订单</span>";
+								+"<span style=\"background:url('../data_access/imgmouse_files/20180601180147.png') no-repeat;background-size:100% 110%; display: inline-block;padding:5px 5px 5px 10px; color:#fff;\">社员订单</span>";
 						}
 						infoStr= infoStr
 	                       	+"</td>"
