--- a/WebContent/crm/memberData_list.html
+++ b/WebContent/crm/memberData_list.html
@@ -144,8 +144,11 @@
                                 <button type="button" onclick="resetSerachParam(1)" style="border-color:#00a65a;background-color:#00a652;color:white" class="btn btn-block">重置</button>
                             </div>
 
-                            <div class="col-lg-2 pull-right" style="padding-top: 0px;">
+                            <div class="col-lg-2 pull-right" style="padding-top: 0px;" id="exportnormal">
                                 <button type="button" style="display:block" id="export_auto_publicOrder_button" onclick="export_auto_human()" class="btn btn-block btn-warning">导出</button>
+                            </div>
+                            <div class="col-lg-2 pull-right" style="padding-top: 25px;display:none" id="exportall">
+                                <button type="button" id="export_manual_massOrder_button" onclick="export_auto_human('all')" class="btn btn-block btn-warning">完整数据导出</button>
                             </div>
                             <div class="form-group col-lg-2 pull-right" style="padding-top: 0px;">
                                 <button type="button" onclick="search_auto_abnormalOrder(1)" class="btn btn-block btn-primary">查询</button>
