--- a/WebContent/crm/current_shopkeeper.html
+++ b/WebContent/crm/current_shopkeeper.html
@@ -1930,7 +1930,7 @@ function initStoreHistoryGMV(){
 
     //社员档案
     function goToMemberDataStat(){
-        var url = "memberData_list.html?t="+encode64(2)+"&s="+encode64(currentStore.store_id)+"&sn="+encode64(currentStore.name)+"&c=&cn="+encode64(currentStore.cityName)+"&e=&r=&#ff";
+        var url = "memberData_list.html?t="+encode64(2)+"&s="+encode64(currentStore.id)+"&sn="+encode64(currentStore.name)+"&c=&cn="+encode64(currentStore.cityName)+"&e=&r=&#ff";
         window.open(url,"memberData_list");
     }
 
