--- a/WebContent/crm/memberData_list.html
+++ b/WebContent/crm/memberData_list.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker-bs3.css">
     <!-- Select2 -->
     <link rel="stylesheet" href="plugins/select2/select2.min.css">
+    <link rel="stylesheet" href="plugins/date-new/css/jquery-ui-1.9.2.custom.css" type="text/css">
     <link href="../scripts/css/auto.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -80,6 +81,11 @@
         }
 
         .auto{max-height:200px; overflow-y:scroll;}
+        .opeDiv span{float: right;width: 46px;height: 24px;line-height: 24px;text-align: center;font-size: 12px;border: 1px solid #9fa3a8;border-radius: 3px;color: #616d73;margin: 0 13px 12px 0;box-shadow: 0 1px 5px rgba(0,0,0,0.3);cursor: pointer;}
+        .Confirm{ background: linear-gradient(#83c56a, #63b254); border: 1px solid #46975d!important;; color: #fff!important;}
+        .ui-close-date{color: #fff; font-size: 14px!important; float:right!important; margin-right:10px!important}
+        .ui-datepicker-quick span{height: 30px; line-height: 35px}
+        .ui-datepicker-time{background-color:transparent}
     </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
@@ -135,7 +141,39 @@
                             </div>
 
                             <div class="clearfix">
-                                <div class="form-group col-lg-3"><span style="font-weight:700">邀请码</span>：&nbsp; <input type="text" class="form-control" id="member_invite_code"  placeholder="邀请码" onkeyup="value=value.replace(/(\s*)|(\s*)/g,'').replace(/[ ]/g,'')" style="border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);"/>
+                                <div class="form-group col-lg-3">
+                                    <div class="search-con">
+                                        <div class="time" style="width: 325px;z-index: 99999;margin:0 15px 0 0;">
+                                            <div class="time_endbg" id="time_endbg">
+                                                <p>开卡日期选择：<span class="data_choice" id="data_choice">默认时期</span></p>
+                                                <input type="text" class="ui-datepicker-time" id="searchTime" readonly value=""/>
+                                            </div>
+                                        </div>
+                                        <div class="ui-datepicker-css" id="ui-datepicker-css" style="margin:0 15px 0 0;">
+                                            <div class="ui-datepicker-quick" id="ui-datepicker-quick">
+                                                <input class="ui-date-quick-button" type="button" value="今天" alt="0"  name=""/>
+                                                <input class="ui-date-quick-button" type="button" value="昨天" alt="-1" name=""/>
+                                                <input class="ui-date-quick-button" type="button" value="7天内" alt="-6" name=""/>
+                                                <input class="ui-date-quick-button" type="button" value="30天内" alt="-29" name=""/>
+                                                <input class="ui-date-quick-button" type="button" value="60天内" alt="-59" name=""/>
+                                                <input class="ui-date-quick-button" type="button" value="全部" alt="1" name="">
+                                                <span class="ui-close-date" id="ui-close-date" style="cursor:pointer;">X</span>
+                                            </div>
+                                            <div class="ui-datepicker-choose">
+                                                <div class="ui-datepicker-date">
+                                                    <input name="startDate" id="startOpenCardDate" class="startDate" readonly value="2018/05/21" type="text">
+                                                    到
+                                                    <input name="endDate" id="endOpenCardDate" class="endDate" readonly  value="2018/05/21" type="text" disabled>
+                                                </div>
+                                                <div class="opeDiv">
+                                                    <span class="Confirm" id="Confirm" onclick="datePickersOpenCard()">确定</span>
+                                                    <span class="Cancel" id="Cancel">取消</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-lg-3"><input type="text" class="form-control" id="member_invite_code"  placeholder="邀请码" onkeyup="value=value.replace(/(\s*)|(\s*)/g,'').replace(/[ ]/g,'')" style="margin-top:10px;border-radius: 6px; box-shadow: 0 1px 1px rgba(0,0,0,0.3);"/>
                                 </div>
                             </div>
                         </form>
@@ -195,6 +233,8 @@
 
 <!-- jQuery 2.2.0 -->
 <script src="plugins/jQuery/jQuery-2.2.0.min.js"></script>
+<script src="plugins/date-new/js/jquery-ui-1.9.2.custom.js" type = "text/javascript"></script>
+<script src="plugins/date-new/js/share.js" type = "text/javascript"></script>
 <!-- Bootstrap 3.3.6 -->
 <script src="bootstrap/js/bootstrap.min.js"></script>
 <!-- Morris.js charts -->
@@ -266,6 +306,8 @@
     var deptname = decode64(getUrlParamByKey("dn"));//事业部名称
     var employeeName = decode64(getUrlParamByKey("en"));//员工姓名
     var employeePhone = decode64(getUrlParamByKey("ep"));//员工手机号
+    var time = decode64(getUrlParamByKey("time"));//开卡时间
+    var inviteCode = decode64(getUrlParamByKey("ic"));//邀请码
 
     /* 	$('#sign_time').datepicker({
               autoclose: true
@@ -278,6 +320,10 @@
         });
         $(".logo-lg > ul > li").mouseleave(function(){
             $(this).children(".nav_dropdown").hide();
+        });
+        $("#ui-datepicker-quick input").click(function(){
+            var buttonValue= $(this).val();
+            $('#data_choice').html(buttonValue);
         });
 
         initcurruser();//初始化登录人信息
@@ -325,6 +371,15 @@
                 }
             }
         });
+
+        //从社员邀请统计页跳转携带开卡时间
+        if(time!="" && time!=null){
+            $("#searchTime").val(time);
+            $("#startOpenCardDate").val(time.split('-')[0]);
+            $("#endOpenCardDate").val(time.split('-')[1]);
+            search_auto_abnormalOrder(1);
+        }
+        $("#member_invite_code").val(inviteCode);
 
     });
 
@@ -490,12 +545,23 @@
         $("#process_div_pic").show();
 
         var memberInviteCode = $("#member_invite_code").val();
+        //社员开卡时间
+        var ocdate = $("#searchTime").val();
+        var opencard_begin_end_date=["",""];
+        if(ocdate!=""){
+            opencard_begin_end_date = ocdate.split("-");
+        }
+        var opencard_begin_time = opencard_begin_end_date[0].trim();
+        var opencard_end_time = opencard_begin_end_date[1].trim();
+
 
         var memberDataDto=null;
         memberDataDto = {
             cityName:cityName,
             storeNo:number_str,
-            inviteCode:memberInviteCode
+            inviteCode:memberInviteCode,
+            open_card_time_begin:opencard_begin_time,
+            open_card_time_end:opencard_end_time
         }
 
         var pageInfo = new Object();
@@ -624,6 +690,14 @@
         }
         $("#store_id_manual").val("");
         $("#member_invite_code").val("");
+        var nowDate = new Date();
+        var month = nowDate.getMonth()+1;
+        var date = nowDate.getDate();
+        timeStr = nowDate.getFullYear() + '/' + (month < 10 ? '0' + month : '' + month) + '/' + (date < 10 ? '0' + date : '' + date);
+        nowDate.setDate(nowDate.getDate()+parseInt(-1));
+        var startDateStr = nowDate.getFullYear() + '/' + (month < 10 ? '0' + month : '' + month) + '/01';
+        $("#searchTime").val(startDateStr +"-"+ timeStr);
+        $("#data_choice").html("默认时期");
     }
 
     var autoPageRecordes=10;
@@ -654,13 +728,23 @@
         $("#process_div_pic").show();
 
         var memberInviteCode = $("#member_invite_code").val();
+        //社员开卡时间
+        var ocdate = $("#searchTime").val();
+        var opencard_begin_end_date=["",""];
+        if(ocdate!=""){
+            opencard_begin_end_date = ocdate.split("-");
+        }
+        var opencard_begin_time = opencard_begin_end_date[0].trim();
+        var opencard_end_time = opencard_begin_end_date[1].trim();
 
         var memberDataDto=null;
         memberDataDto = {
             cityName:cityName,
             storeNo:number_str,
             inviteCode:memberInviteCode,
-            hidden_flag:hiddenvalue
+            hidden_flag:hiddenvalue,
+            open_card_time_begin:opencard_begin_time,
+            open_card_time_end:opencard_end_time
         }
 
         doManager('communeMember','exportMemeData',[memberDataDto],function(data){
