--- a/WebContent/crm/memberData_list.html
+++ b/WebContent/crm/memberData_list.html
@@ -625,7 +625,7 @@
 
                         infoStr= "<tr>";
                         infoStr= infoStr
-                            +"<td><a href=\"#\" onmouseover=\"showphone('"+phonecontent+"');\" id=\""+phoneid+"\">"+mobilephone.replace(/(\d{3})\d{4}(\d{4})/, '$1****$2')+"</a></td>"
+                            +"<td><a href=\"javascript:showuserprofile('"+jData[i].customer_id+"','"+mobilephone+"')\" onmouseover=\"showphone('"+phonecontent+"');\" id=\""+phoneid+"\">"+mobilephone.replace(/(\d{3})\d{4}(\d{4})/, '$1****$2')+"</a></td>"
                             +"<td>"+regist+"</td>"
                             +"<td>"+opencard+"</a></td>";
                         if(target==0 || target==1){
@@ -667,6 +667,29 @@
         });
     }
 
+    //数据查询-用户档案
+    function showuserprofile(customer_id,mobilephone){
+        // doManager('userProfileManager','queryRecentlyOrder',[customer_id],function(data){
+        //     if(data.result){
+        //         var result= JSON.parse(data.data);
+        //         if(result!=null){
+        //             var jData = result.data;
+        //             if(jData!=null && jData.length>0){
+        //                 var url = "userProfile_view.html?t="+encode64(target)+"&sn="+encode64(storeName)+"&cn="+encode64(cityname)+"&c="+encode64(cityId)+"&so="+encode64(storeno)+"&mp="+encode64(mobilephone);
+        //                 window.open(url,"userProfile_view");
+        //             }else{
+        //                 crm_alert(5,"暂无消费信息！");
+        //             }
+        //
+        //         }
+        //     }
+        // });
+        var ocdate = $("#searchTime").val();
+        var url = "userProfile_view.html?t="+encode64(target)+"&sn="+encode64(storeName)+"&cn="+encode64(cityname)+"&c="+encode64(cityId)+"&so="+encode64(storeno)+"&mp="+encode64(mobilephone)+"&tag="+encode64("V")+"&time="+encode64(ocdate);
+        window.open(url,"userProfile_view");
+
+    }
+    
     //数据查找-员工数据
     function showemployee(inviteCode){
         var url = "humanresources_list.html?t="+encode64(target)+"&sn="+encode64(storeName)+"&cn="+encode64(cityname)+"&ic="+encode64(inviteCode);
