隐藏外部人员邀请码短信发送入口

--- a/WebContent/shortMessage/SMSUserGroup_add.html
+++ b/WebContent/shortMessage/SMSUserGroup_add.html
@@ -462,7 +462,7 @@ function getCode(){
                                     <option value="offline">线下用户组</option>
                                     <option value="storekeeper">店长组</option>
                                     <option value="customer">客户用户组</option>
-                                    <option value="outsider">外部人员组</option>
+                                    <!--<option value="outsider">外部人员组</option>-->
                                 </select>
                             </td>
                         </tr>
